Fix inconsistent white space with inline [@escaped code@], reported by Dannybpng.
git-svn-id: svn://pmwiki.org/pmwiki@3401 524c5546-5005-0410-9a3e-e25e191bd360

--- a/trunk/pub/skins/pmwiki-responsive/skin.css
+++ b/trunk/pub/skins/pmwiki-responsive/skin.css
@@ -252,7 +252,7 @@ select, textarea, input {
 /* pmwiki.php */
 ul, ol, pre, dl, p { margin-top:0px; margin-bottom:0px; }
 code.escaped { 
-  white-space: nowrap; 
+  white-space: pre; 
   display: inline-block;
   vertical-align: bottom;
   text-indent: 0;
